--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -49,23 +49,17 @@
       </button>
 
       {% if site.data.contact.size > 0 %}
-        <span class="icon-border"></span>
+      <!-- <span class="icon-border"></span> -->
       {% endif %}
     {% endunless %}
 
     {% for entry in site.data.contact %}
       {% case entry.type %}
-        {% when 'github', 'twitter' %}
-          {%- capture url -%}
-            https://{{ entry.type }}.com/{{ site[entry.type].username }}
-          {%- endcapture -%}
         {% when 'email' %}
           {% assign email = site.social.email | split: '@' %}
           {%- capture url -%}
             javascript:location.href = 'mailto:' + ['{{ email[0] }}','{{ email[1] }}'].join('@')
           {%- endcapture -%}
-        {% when 'rss' %}
-          {% assign url = '/feed.xml' | relative_url %}
         {% else %}
           {% assign url = entry.url %}
       {% endcase %}
