--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,5 +83,7 @@ layout: compress
     {% endif %}
 
     {% include_cached search-loader.html %}
+
+    {% include simple-analytics.html %}
   </body>
 </html>
